// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitLetterTemplate component should render 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <h1>
          Approve and submit 'template-name'
        </h1>
        <p
          class="nhsuk-body-l"
        >
          When you submit a letter template, it will be used by NHS Notify to set up the messages you want to send.
        </p>
        <h2
          class="nhsuk-heading-s"
        >
          Before you submit this template
        </h2>
        <p>
          Check that your template proof:
        </p>
        <ul
          class="nhsuk-list nhsuk-list--bullet"
        >
          <li>
            looks exactly as you expect your recipient to get it
          </li>
          <li>
            uses personalisation as you expect
          </li>
          <li>
            shows QR codes correctly (if used)
          </li>
        </ul>
        <div
          class="nhsuk-warning-callout"
        >
          <h2
            class="nhsuk-warning-callout__label"
          >
            <span
              role="text"
            >
              <span
                class="nhsuk-u-visually-hidden"
              >
                Important: 
              </span>
              Important
            </span>
          </h2>
          <p>
            You cannot edit a template after you've approved and submitted it. You can only replace it with a new template.
          </p>
        </div>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="submit-template-form"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <input
            name="templateId"
            readonly=""
            type="hidden"
            value="template-id"
          />
          <input
            name="lockNumber"
            readonly=""
            type="hidden"
            value="1234"
          />
          <a
            aria-disabled="false"
            class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-right-3"
            data-testid="back-link-bottom"
            draggable="false"
            href="/templates/preview-letter-template/template-id"
            role="button"
          >
            Go back
          </a>
          <button
            aria-disabled="false"
            class="nhsuk-button"
            id="submit-template-button"
            type="submit"
          >
            Approve and submit
          </button>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`SubmitLetterTemplate component should render with client proofing disabled 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <h1>
          Submit 'template-name'
        </h1>
        <h2
          class="nhsuk-heading-s"
        >
          Before you submit
        </h2>
        <p>
          You should check that your template:
        </p>
        <ul
          class="nhsuk-list nhsuk-list--bullet"
        >
          <li>
            is approved by the relevant stakeholders in your team
          </li>
          <li>
            does not have any spelling errors
          </li>
          <li>
            is formatted correctly
          </li>
        </ul>
        <h2
          class="nhsuk-heading-s"
        >
          After you submit this template
        </h2>
        <p>
          Our service team will send you a proof of this letter template by email.
        </p>
        <p>
          This email will also tell you what you need to do next.
        </p>
        <div
          class="nhsuk-warning-callout"
        >
          <h2
            class="nhsuk-warning-callout__label"
          >
            <span
              role="text"
            >
              <span
                class="nhsuk-u-visually-hidden"
              >
                Important: 
              </span>
              Important
            </span>
          </h2>
          <p>
            You cannot edit a template after you've submitted it. You can only replace it with a new template.
          </p>
        </div>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="submit-template-form"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <input
            name="templateId"
            readonly=""
            type="hidden"
            value="template-id"
          />
          <input
            name="lockNumber"
            readonly=""
            type="hidden"
            value="1234"
          />
          <a
            aria-disabled="false"
            class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-right-3"
            data-testid="back-link-bottom"
            draggable="false"
            href="/templates/preview-letter-template/template-id"
            role="button"
          >
            Go back
          </a>
          <button
            aria-disabled="false"
            class="nhsuk-button"
            id="submit-template-button"
            type="submit"
          >
            Submit template
          </button>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
